--- a/03/Superhero/config/app.yaml
+++ b/03/Superhero/config/app.yaml
@@ -13,18 +13,18 @@ services:
   http_port: 8080
   instance_count: 1
   instance_size_slug: basic-xxs
-  name: pythonwebapps-03-superhero
+  name: pythonwebapps-02-profile-app
   routes:
   - path: /
   run_command: gunicorn --worker-tmp-dir /dev/shm config.wsgi
-  source_dir: 03/Superhero
+  source_dir: 02/ProfileApp
 static_sites:
 - environment_slug: html
   github:
     branch: main
     deploy_on_push: true
     repo: Esi-Mena/PythonWebApps
-  name: pythonwebapps-03-superhero
+  name: pythonwebapps-02-profile-app-sta
   routes:
   - path: /static
-  source_dir: 03/Superhero/static
+  source_dir: 02/ProfileApp/static
